--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyDatabase": "Server=b4zgrbg0p5agywu5uone-mysql.services.clever-cloud.com;uid=uvrnnkzbvqxwbbtl;pwd=DH4qJTx1faatXeQqsH7n;database=b4zgrbg0p5agywu5uone;"
+  },
+  "PaginationSettings": {
+    "DefaultPageSize": 15
+  },
   "AllowedHosts": "*"
 }
