--- a/VHSKCD.csproj
+++ b/VHSKCD.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="murmurhash" Version="1.0.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+		<PackageReference Include="QuestPDF" Version="2025.7.2" />
 		<PackageReference Include="RestSharp" Version="112.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
